2009-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawDashPolygon): Avoid access beyond end of
	array.  Resolves SourceForge issue 2832125 "Crash on SVG
	conversion".

	* magick/magick.c (InitializeMagick): Improve the quality of the
	seed passed to srand().

	* coders/png.c (ReadOnePNGImage): Ensure that opacity channel is
	properly initialized.  Resolves SourceForge issue 2831240
	"Possible alpha channel issue with PNG w/palette and tRNS".

2009-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (ReadMETAImage): Fix memory leak of profile blob.

2009-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (ReadPCXImage): Detect improper rows, columns, or
	depth.  Fixes CVE-2008-1097 "Memory corruption in ImageMagick's
	PCX coder".

	* configure.ac: Update to Autoconf 2.64.

2009-07-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): In some cases, RowsPerStrip
	needs to be a multiple of 16 for JPEG in TIFF so ensure that
	RowsPerStrip is a multiple of 16.

2009-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (WriteDPXImage): Fix leak of chroma image when
	subsampling to 4:2:2.

2009-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): Input wildcard file
	specifications with a subdirectory component such as
	"subdir/*.dpx" were not working.  Expand @filename to a list of
	arguments.

2009-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Debian stores Ghostscript fonts under
	/usr/share/fonts/type1/gsfonts so check there for fonts.  Issue
	reported by Ralf Wildenhues.

2009-05-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Magick.xs: Fix Ping of blob.

	* PerlMagick/t/ping.t: Added tests for pinging files and blobs.

	* www/perl.html: Ping blob syntax is like $image->Ping(blob=>@blob).

2009-05-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
