@@ -24,6 +24,8 @@
 2009-08-30  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> coders/wmf.c: Eliminate memory leaks.
+
   <LI> magick/render.c (DrawDashPolygon): Avoid access beyond end of
         array.  Resolves SourceForge issue 2832125 "Crash on SVG
         conversion".
